k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: javaalmas20
  labels:
    app: javaalmas20
